<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="141dp">

        <TextView
            android:id="@+id/reglage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:fontFamily="sans-serif"
            android:text="@string/reglages"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textColor="#2196F3"
            android:textStyle="bold"
            android:typeface="normal" />

        <Switch
            android:id="@+id/musique"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:showText="false"
            android:splitTrack="false"
            android:switchTextAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/musique"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textOff="@android:string/no"
            android:textOn="@android:string/yes" />

        <Switch
            android:id="@+id/bruitage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/bruitage"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textOff="@android:string/no"
            android:textOn="@android:string/yes" />

        <Button
            android:id="@+id/reglageMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/menu"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:onClick="goToMenuFromSettings"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>